适配butterknife与androidx冲突

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+//        maven { url 'https://maven.aliyun.com/repository/google' }
+//        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+//        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
         
     }
     dependencies {
@@ -18,7 +21,11 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+//        maven { url 'https://maven.aliyun.com/repository/google' }
+//        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+//        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+        maven { url 'https://jitpack.io' }
+        maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
     }
 }
 
