--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     //图片加载
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.youth.banner:banner:1.4.10'
+    implementation 'com.google.android.material:material:1.2.0-alpha04'
 }
