--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.videoplayer"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -56,4 +56,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.youth.banner:banner:1.4.10'
     implementation 'com.google.android.material:material:1.2.0-alpha04'
+    implementation 'cn.jzvd:jiaozivideoplayer:6.2.12'
 }
