添加播放历史记录逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
 <!--            </intent-filter>-->
         </activity>
         <activity android:name=".business.login.UserRegisterActivity" />
+        <activity android:name=".business.VideoHistoryActivity"/>
 
 <!--        <provider-->
 <!--            android:name="cn.bmob.v3.util.BmobContentProvider"-->
