--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,26 +17,18 @@
 
         <activity android:name=".MainActivity"
             android:windowSoftInputMode="stateVisible|adjustPan">
+        </activity>
+        <activity android:name=".business.login.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".business.login.LoginActivity" >
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-        </activity>
         <activity android:name=".business.login.UserRegisterActivity" />
         <activity android:name=".business.VideoHistoryActivity"/>
+        <activity android:name=".business.PersonalDataActivity"/>
 
-<!--        <provider-->
-<!--            android:name="cn.bmob.v3.util.BmobContentProvider"-->
-<!--            android:authorities="com.example.videoplayer.BmobContentProvider">-->
-<!--        </provider>-->
     </application>
 
 </manifest>
