--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'com.github.xiedong11:base-library:1.4'
+    implementation ('com.github.xiedong11:base-library:1.4') {
+        exclude group: 'cn.bmob.android'
+    }
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     //Bmob依赖
