--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,13 +48,13 @@ dependencies {
     }
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
-    //Bmob依赖
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+//    //Bmob依赖
+    implementation "io.reactivex.rxjava2:rxjava:2.2.2"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.squareup.okio:okio:2.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     //图片加载
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.youth.banner:banner:1.4.10'
     implementation 'com.google.android.material:material:1.2.0-alpha04'
     implementation 'cn.jzvd:jiaozivideoplayer:6.2.12'
